# cheshbon

./: .gitignore  CONTRACT.md  MANIFEST.in  NOTICE  QUICKSTART.md  README.md  TRADEMARK  pyproject.toml  pytest.ini
benchmarks/Windows-CPython-3.14-64bit/: 0001_sentinels-baseline-2026-01-29.json  0002_sentinels-upgrayed-2026-01-29.json  0003_sentinels-core-baseline-2026-01-29.json  0004_sentinels-core-upgrayed-2026-01-29.json  0005_sentinels-after-alldetails-2026-01-29.json
docs/: architecture.md
docs/api-reference/: v1_CONTRACT.md
docs/developer-guide/: IMPLEMENTATION_NOTES.md  KEY_QUESTION_ANSWER.md  performance-sentinels.md
docs/sans/: CHESHBON_GRAPH_V0_2.md  REPORT_SCHEMA.json  SANS_BUNDLE_CONTRACT.md  SANS_INVARIANTS.md
docs/user-guide/: 00_context_summary.md  bindings_layer.md  change_events_ontology.md  graph_diff.md  sans_ingestion.md  what-cheshbon-will-never-do.md
fixtures/: README.md  bindings_v1.json  bindings_v2.json  bindings_v2_missing.json  mapping_spec_v1.json  mapping_spec_v2.json  mapping_spec_v2_unresolved.json  raw_schema_v1.json  raw_schema_v2.json  transform_registry.json
fixtures/run_diff_clin_demo/: impact.json  (+1 more)
schemas/: all_details_report.schema.json  mapping_spec.schema.json  transform_registry.schema.json
scripts/: generate_schemas.py
tests/: TEST_INVENTORY.md  __init__.py  conftest.py  test_all_details_report.py  test_ambiguous_binding_validation_failure.py  test_ambiguous_bindings.py  test_api.py  test_api_stability.py  test_binding_impact.py  test_canonical_json_hashing.py  test_canonicalization_edge_cases.py  test_change_events.py  test_cycle_detection.py  test_diff.py  test_diff_report_modes.py  test_doctor_report.py  test_graph.py  test_graph_bundle_ingest.py  test_graph_diff_bundles.py  test_graph_diff_class_pairing.py  test_graph_diff_events.py  test_graph_diff_impact.py  test_graph_diff_transform_pairing.py  test_graph_v1_ingest.py  test_hash_utils.py  test_impact.py  test_kernel_guardrails.py  test_no_backend_imports.py  test_packaging.py  test_public_surface.py  test_pydantic_configdict_migration.py  test_run_diff.py  test_run_diff_schema_integration.py  test_sans_ingest.py  test_sans_verify.py  test_schema_stability.py  test_spec.py  test_transform_history_immutability.py  test_transform_render.py  test_validate_api.py  (+1 more)
(+126 files in other folders)
