[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cheshbon"
version = "1.0.0"
description = "Deterministic diff and impact analysis for data transformation mapping specifications"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [{ name = "Joe Norton", email = "joenortondev@gmail.com" }]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  { name = "Joe Norton", email = "joenortondev@gmail.com" },
]

keywords = [
  "data-lineage",
  "impact-analysis",
  "deterministic-pipelines",
  "data-mapping",
  "change-detection",
  "reproducible-data",
  "clinical-data",
  "governance",
  "auditability",
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",

  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Information Analysis",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pydantic>=2.12.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "pytest-benchmark"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cheshbon*"]

[project.scripts]
cheshbon = "cheshbon.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--basetemp=.pytest-tmp --cov=src/cheshbon --cov-report=term-missing"
markers = ["perf: performance sentinel benchmarks (requires --run-perf)"]
